crates/ruff_python_parser/tests/snapshots/invalid_syntax@debug_shadow_try.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/debug_shadow_try.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            9,
        ),
        range: 0..44,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(
                        8,
                    ),
                    range: 0..43,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    1,
                                ),
                                range: 5..8,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(
                                            0,
                                        ),
                                        range: 5..8,
                                    },
                                ),
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 9..43,
                                node_index: NodeIndex(
                                    7,
                                ),
                                type_: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                3,
                                            ),
                                            range: 16..25,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("__debug__"),
                                        range: 29..38,
                                        node_index: NodeIndex(
                                            4,
                                        ),
                                    },
                                ),
                                body: [
                                    Expr(
                                        StmtExpr {
                                            node_index: NodeIndex(
                                                6,
                                            ),
                                            range: 40..43,
                                            value: EllipsisLiteral(
                                                ExprEllipsisLiteral {
                                                    node_index: NodeIndex(
                                                        5,
                                                    ),
                                                    range: 40..43,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | try: ...
2 | except Exception as __debug__: ...
  |                     ^^^^^^^^^ Syntax Error: cannot assign to `__debug__`
  |
